--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Django==3.1.7
 djangorestframework==3.12.2
 mypy-extensions==0.4.3
 pathspec==0.8.1
+psycopg2==2.8.6
 pytz==2021.1
 regex==2020.11.13
 sqlparse==0.4.1
