--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,11 @@ black==20.8b1
 click==7.1.2
 Django==3.1.7
 djangorestframework==3.12.2
+djangorestframework-simplejwt==4.6.0
 mypy-extensions==0.4.3
 pathspec==0.8.1
 psycopg2==2.8.6
+PyJWT==2.0.1
 pytz==2021.1
 regex==2020.11.13
 sqlparse==0.4.1
