--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ black==20.8b1
 click==7.1.2
 coverage==5.5
 Django==3.1.7
+django-crispy-forms==1.11.1
 django-filter==2.4.0
 djangorestframework==3.12.2
 djangorestframework-simplejwt==4.6.0
